<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="80sp"
                app:cardElevation="10dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardMaxElevation="10dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                android:clickable="true"
                android:focusable="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="toRegister">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/admin"
                        android:textSize="20sp"
                        android:id="@+id/dialogAdmin" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="80sp"
                app:cardElevation="10dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardMaxElevation="10dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="toRegister">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/super_distributer"
                        android:layout_centerInParent="true"
                        android:textSize="20sp"
                        android:id="@+id/dialogSuperDistrubuter" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="80sp"
                app:cardElevation="10dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardMaxElevation="10dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="toRegister">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/distributer"
                        android:textSize="20sp"
                        android:id="@+id/dialogDistrubuter" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="80sp"
                app:cardElevation="10dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardMaxElevation="10dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="toRegister">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/retailer"
                        android:textSize="20sp"
                        android:id="@+id/dialogRetailer" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </RelativeLayout>
</layout>